--- a/views/now_playing.ejs
+++ b/views/now_playing.ejs
@@ -5,21 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title><%=title %></title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <script src="main.js"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" media="screen" href="/stylesheets/styles.css" />
+    <!-- <script src="main.js"></script> -->
 </head>
 <body>
     <div class="container">
-        <div class="row">
-            <div class="col-sm-12">
-                <% parsedData.forEach((movie)=>{ %>
-                    <div class="col-sm-3">
-                        <img src="<%= imageBaseUrl + movie.poster_path %>" />
-                        <p><%= movie.title %></p>
-                        <p><%= movie.overview %></p>
-                    </div>
-               <% }); %>
+        <div class="row d-flex justify-content-center">
+            <div class="col-sm-12 p-3">
+                <% include search %>
+                <h1>Your ip is <%=ip%></h1>
+                <div class="row d-flex justify-content-center">
+                    <% parsedData.forEach((movie)=>{ %>
+                        <div class="col-sm-3 m-4">
+                            <img src="<%= imageBaseUrl + movie.poster_path %>" />
+                            <p><%= movie.title %></p>
+                            <p><%= movie.overview %></p>
+                        </div>
+                    <% }); %>
+                </div>
             </div>
         </div>
     </div>
