--- a/views/now_playing.ejs
+++ b/views/now_playing.ejs
@@ -12,9 +12,11 @@
 <body>
     <div class="container">
         <div class="row d-flex justify-content-center">
-            <div class="col-sm-12 p-3">
+            <div class="col-sm-12 p-3 d-flex justify-content-center">
+                <% include navbar %>
                 <% include search %>
-                <h1>Your ip is <%=ip%></h1>
+            </div>
+            <div class="col-sm-12 p-3 d-flex justify-content-center">
                 <div class="row d-flex justify-content-center">
                     <% parsedData.forEach((movie)=>{ %>
                         <div class="col-sm-3 m-4">
